<resources>
    <string name="app_name">My Downloader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_download">Download</string>
    <string name="file_name_glide">Glide</string>
    <string name="file_name_udacity_repo">Udacity</string>
    <string name="file_name_retrofit">Retrofit</string>
    <string name="file_name">File Name</string>
    <string name="status">Status :</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
</resources>
